# traefik-rust-wasm-plugin

./: .envrc  default.nix
forward-auth-wasm/: .gitignore  .traefik.yml  Cargo.toml  LICENSE_MIT  Makefile  docker-compose.yml
forward-auth-wasm/libs/traefik_wasm_api/: Cargo.toml  README.md
forward-auth-wasm/libs/traefik_wasm_api/src/: lib.rs
forward-auth-wasm/src/: guest.rs  lib.rs  main.rs
