[package]
name = "traefik-example"
authors = ["Paul Adams <nihaopaul@gmail.com>"]
version = "1.0.0"
edition = "2018"
target = "wasm32-unknown-unknown"
repository = "https://github.com/nihaopaul/traefik-rust-wasm-plugin"
description = "example interface for traefik"
include = [
    "libs/traefik_wasm_api/*"
]
publish = true

[lib]
crate-type = ["cdylib", "rlib"]
path = "libs/traefik_wasm_api/src/lib.rs"

[features]
default = []

[dependencies]
lazy_static = "1.5.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
traefik_wasm_api = { path = "libs/traefik_wasm_api" }


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"


