[package]
name = "traefik_wasm_api"
version = "1.0.0"
authors = ["Paul Adams <nihaopaul@gmail.com>"]
edition = "2018"
target = "wasm32-unknown-unknown"
repository = "https://github.com/nihaopaul/traefik-rust-wasm-plugin"
description = "wasm interface for traefik"
include = [
    "lib.rs",
    "Cargo.toml",
]

[lib]
crate-type = ["cdylib", "rlib"]
path="src/lib.rs"

[features]
default = []

[dependencies]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"


